# TVT25SPL-Olio-ohjelmointi

./: README.md
perinta_esimerkki/: CMakeLists.txt  father.cpp  father.h  main.cpp  son.cpp  son.h
randomNumberGenerator/: CMakeLists.txt  dht.cpp  dht.h  lcd.cpp  lcd.h  main.cpp  mittari.cpp  mittari.h  random.cpp  random.h
week1/: CMakeLists.txt  main.cpp
week2/: CMakeLists.txt  game.cpp  game.h
week3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
week4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
week5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
